

2011-02-18  Malcolm Nooning  <m.nooning@comcast.net> (0.45)
        * lib/Net/Daemon.pm Used "make dist" to create the uploaded
	* distribution.  Bumped up the version number first.
2011-02-17  Malcolm Nooning  <m.nooning@comcast.net> (0.44)
        * lib/Net/Daemon.pm Added ServClose patch by Gaspar Chilingarov
	* t/thread.t Added patches by Daniel Macks and Joe McMahon,
	  and added Test::More and skip_all for Windows < 5.10
2009-03-12  Joe McMahon     <mcmahon@blekko.com> (0.44)
       * Added necessary thread sharing to work with 5.10
         threads model: regexp-threads,
       * Bumped minimum required perl to 5.10 for t/threads.t tests
2007-06-17  Malcolm Nooning  <m.nooning@comcast.net> (0.43)
        * lib/Net/Daemon.pm  Needed to up the VERSION number
2007-06-16  Malcolm Nooning  <m.nooning@comcast.net> (0.42)
        * t/forkm.t: Added a wait so that the parent will not loop
	  around and make another child until the previous child has
	  been destroyed.
2007-05-23  Malcolm Nooning  <m.nooning@comcast.net> (0.41)
        * t/forkm.t: When all ten childs are exited,
	  sub CatchChild will now exit.
2007-05-16  Malcolm Nooning  <m.nooning@comcast.net> (0.40)
	* t/threadm.t: The tests are now skipped with a
	  passing indication when usethreads is defined, which
	  would mean that the ithreadm tests are the ones that
	  matter.
	  Test.pm: A patch from todd.e.rinaldo was used.  I do
	  not remember what the issues were.

2006-02-15  Jochen Wiedmann  <jwied@cpan.org> (0.39)

        * t/forkm.t: Hopefully, I finally got rid of the
	  problem with the forking tests. It seems, that
	  the perlipc manual got updated in the past years,
	  most possibly for the same reason: A child handler
	  must be written to catch childs in a loop.

2003-11-10  Jochen Wiedmann  <joe@ispsoft.de> (0.38)

	* lib/Net/Daemon.pm: It is now possible to specify
	  user/group root (aka 0). (rgreab@fx.ro)
 	* Added mode 'ithreads'. (Bill Jackson,
 	  <bjackson@ah.ddiglobal.com>)