@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Net-Daemon
-version:            0.45
+version:            0.46
 abstract:           Perl extension for portable daemons
 author:
     - Jochen Wiedmann (joe@ispsoft.de)
